[gd_scene load_steps=14 format=3 uid="uid://yh6djl6ivrtg"]

[ext_resource type="Script" path="res://Scripts/main_menu_screen.gd" id="1_foefc"]
[ext_resource type="FontFile" uid="uid://bbpfkh42uuigb" path="res://UI/nintendo-nes-font.ttf" id="1_nk7wd"]
[ext_resource type="AudioStream" uid="uid://bbf1rqpwbwa6" path="res://SFX/OptionSelect.wav" id="4_np65c"]
[ext_resource type="AudioStream" uid="uid://btq5fhl615ned" path="res://SFX/OptionMove.wav" id="5_kb82g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ncvyk"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mbwn7"]
font = ExtResource("1_nk7wd")
font_size = 32
shadow_color = Color(0, 1, 0.858824, 1)
shadow_offset = Vector2(1, 4)

[sub_resource type="LabelSettings" id="LabelSettings_wdu8m"]
font = ExtResource("1_nk7wd")

[sub_resource type="Animation" id="Animation_yb8e0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_q1a0e"]
resource_name = "blink"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n31wg"]
_data = {
"RESET": SubResource("Animation_yb8e0"),
"blink": SubResource("Animation_q1a0e")
}

[sub_resource type="LabelSettings" id="LabelSettings_f1lhw"]
font = ExtResource("1_nk7wd")

[sub_resource type="LabelSettings" id="LabelSettings_2imud"]
font = ExtResource("1_nk7wd")

[sub_resource type="LabelSettings" id="LabelSettings_8w2ee"]
font = ExtResource("1_nk7wd")

[node name="MainMenuScreen" type="CanvasLayer"]
script = ExtResource("1_foefc")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ncvyk")

[node name="MarginTitleContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 250

[node name="Title" type="Label" parent="PanelContainer/MarginTitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "GALVORIAN DOMINIUM"
label_settings = SubResource("LabelSettings_mbwn7")

[node name="MarginButtonContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 400

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="StartText" type="Label" parent="PanelContainer/MarginButtonContainer/Rows"]
layout_mode = 2
text = "START GAME"
label_settings = SubResource("LabelSettings_wdu8m")

[node name="StartAnim" type="AnimationPlayer" parent="PanelContainer/MarginButtonContainer/Rows/StartText"]
libraries = {
"": SubResource("AnimationLibrary_n31wg")
}

[node name="ControlsText" type="Label" parent="PanelContainer/MarginButtonContainer/Rows"]
layout_mode = 2
text = "CONTROLS"
label_settings = SubResource("LabelSettings_f1lhw")

[node name="ControlsAnim" type="AnimationPlayer" parent="PanelContainer/MarginButtonContainer/Rows/ControlsText"]
libraries = {
"": SubResource("AnimationLibrary_n31wg")
}

[node name="CreditsText" type="Label" parent="PanelContainer/MarginButtonContainer/Rows"]
layout_mode = 2
text = "CREDITS"
label_settings = SubResource("LabelSettings_2imud")

[node name="CreditsAnim" type="AnimationPlayer" parent="PanelContainer/MarginButtonContainer/Rows/CreditsText"]
libraries = {
"": SubResource("AnimationLibrary_n31wg")
}

[node name="QuitText" type="Label" parent="PanelContainer/MarginButtonContainer/Rows"]
layout_mode = 2
text = "QUIT GAME"
label_settings = SubResource("LabelSettings_8w2ee")

[node name="MainMenuTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="OptionAccepted" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_np65c")

[node name="OptionChange" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_kb82g")

[connection signal="timeout" from="MainMenuTimer" to="." method="_on_main_menu_timer_timeout"]
